# memeory-agents-demo

./: .gitignore  CLAUDE.md  character_silhouettes.md  concept_sketches.md  config.example.py  logger.py  main.py  models.py  pyproject.toml  simple_file_tools.py  tools.py  utils.py  workflow.py
agents/: __init__.py  base_agent.py  planner_agent.py  role_creator_agent.py  supervisor_agent.py
prompts/: executor_prompts.py  planner_prompts.py  role_creator_prompts.py  supervisor_prompts.py
src/: logger.py  models.py  utils.py  workflow.py
src/prompts/: planner_prompts.py  role_creator_prompts.py  supervisor_prompts.py
src/react_agents/: __init__.py  base_react_agent.py
src/react_agents/planner/: __init__.py  planner_agent.py  tools.py
src/react_agents/role_creator/: __init__.py  role_creator_agent.py  tools.py
src/react_agents/supervisor/: __init__.py  supervisor_agent.py  tools.py
