[project]
name = "memeory-agents-demo"
version = "0.1.0"
description = "Multi-agent system for game character creation using LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.38.45",
    "langchain>=0.3.26",
    "langchain-core>=0.3.0",
    "langchain-aws>=0.2.27",
    "langgraph>=0.5.0",
    "ipython>=8.37.0",
    "pyppeteer>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
]
